# judy

./: .gitignore  .pylintrc  CITATION.cff  CONTRIBUTING  README.md  adding_new_datasets.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml
docs/: adding_new_datasets.md  adding_scenario.md
gpt_eval/cache/: __init__.py  cache.py
gpt_eval/cli/: install.py  run.py
gpt_eval/config/: __init__.py  config_models.py  constants.py  data_models.py  dataset_config.json  dataset_config.yaml  eval_config.json  eval_config.yaml  metric_config.yaml  settings.py  system_config.json  validator.py
gpt_eval/data/: formatter.py  formatters.py  loader.py
gpt_eval/dataset/: __init__.py  loader.py
gpt_eval/evaluation/: evaluator.py
gpt_eval/responders/: __init__.py  base_responder.py  data_models.py  disinfo_reiteration_responder.py  disinfo_wedging_responder.py  mt_q_responder.py  mt_qac_responder.py  st_q_responder.py  st_qa_responder.py  st_qac_responder.py  summ_responder.py
gpt_eval/utils/: __init__.py  config.py  prompt_builder.py  prompts.py  request_retry.py  utils.py
gpt_eval/web_app/: app.py  breadcrumb.py  config.py  utils.py
judy/cache/: cache.py
judy/cli/: data_models.py  edit_config.py  eval_cl.py  install.py  manager.py  pipeline.py  run.py  web_app.py
judy/config/: __init__.py  data_models.py  logging.py  settings.py  validator.py
judy/dataset/: base.py  data_models.py  formatters.py  loader.py
judy/evaluation/: __init__.py  evaluator.py
judy/responders/: __init__.py  base_responder.py  data_models.py  (+9 more)
(+41 files in other folders)
