[tool.poetry]
name = "judy"
version = "2.0.0"
description = "Judy is a python library and framework to evaluate the text-generation capabilities of Large Language Models (LLM) using a Judge LLM."
authors = ["Linden Hutchinson <linden.hutchinson@tesserent.com>", "Rahul Raghavan" <rahul.raghavan@tesserent.com>]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.24.4"
datasets = "^2.14.5"
easyllm = "^0.5.0"
openai = "^1.3.7"
python-dotenv = "^1.0.0"
sqlitedict = "^2.1.0"
pytest = "^7.4.2"
click = "^8.1.7"
platformdirs = "^3.11.0"
black = "^23.10.1"
flask = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
judy = "judy.cli.run:judy_cli"